# pulchra-py

./: README.md  pyproject.toml
scripts/: convert_data.py
src/pulchra/: __init__.py  cli.py  pulchra.py
src/pulchra/core/: __init__.py  constants.py  geometry.py  structures.py
src/pulchra/data/: __init__.py  loader.py  nco_stat.npy  nco_stat_pro.npy  rot_stat_coords.npy  rot_stat_idx.npy
src/pulchra/io/: __init__.py  pdb_parser.py  pdb_writer.py
src/pulchra/optimization/: __init__.py  ca_optimizer.py  energy.py
src/pulchra/reconstruction/: __init__.py  backbone.py  chirality.py  excluded_volume.py  hydrogen_bonds.py  sidechains.py
tests/: __init__.py  conftest.py  test_core.py
